--- a/.github/workflows/auto-pr.yml
+++ b/.github/workflows/auto-pr.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
         with:
-          token: ${{ secrets.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 }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           base: main
           branch: develop
           title: 'Auto PR: Merge develop → main'
