--- a/.github/workflows/auto-pr.yml
+++ b/.github/workflows/auto-pr.yml
@@ -16,9 +16,9 @@ jobs:
           fetch-depth: 0
 
       - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v5
+        uses: peter-evans/create-pull-request@v5.0.1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: {{ secrets.GITHUB_TOKEN }}
           base: main
           branch: develop
           title: 'Auto PR: Merge develop → main'
